Added parameteres bcAuthContext and environment to Compile-AppInBcContainer to allow Compile-AppInBcContainer to download symbols from BC SaaS
Added parameteres bcAuthContext and environment to Publish-AppToBcContainer to allow Publish-AppToBcContainer to publish apps to BC SaaS
Issue #1613 wrong display of reclaimed space

1.0.19
Move retry algorithm to Download-File
Run-AlValidation will try to determine which versions to run validation against if not specified
Run-AlValidation and Run-AlCopys to support that SupportedCountries is optional
Issue #1573 Regression Setup-TraefikContainerForBcContainers stopped working in 1.0.18
Issue #1542 Convert-AlcOutputToAzureDevOps wrong error output

1.0.18
Issue #1556 DotNet Packages for ZipArchive missing in VS Code when creating a Base App
Issue #1559 Handling of Hungary artifacts
Issue #1563 Run-AlValidation with multiple apps fails
Run-AlValidation to support urls as apps, previousapps and installapps
Add parameter CopySymbolsFromContainer to Compile-AppInBcContainer to speed up symbols download
Use CopySymbolsFromContainer in Run-AlCops
Issue #1568 Add publisher parameter to Unpublish and Uninstall app
Issue #1566 Sign-BcContainerApp doesn't work with SHA256
Retry algorithm added to Sign-BcContainerApp
Add Parameter -doNotPublishAdminPort to Setup-TraefikContainerForBcContainers
Add Parameter -additionalParameters to Setup-TraefikContainerForBcContainers
Issue #1577 Run-AlValidation and Extract-AppFileToFolder require absolute paths
Issue #1579 Change default timeStampServer and digestAlgorithm

1.0.17
Issue #1494 Creating another container based on existing artifact
Add additional information when publishing through dev Endpoint (instead of just Unprocessible Entity)
Issue #1530 Not able to Run-AlValidation without previous app.
Issue #1537 Issue with file lock when creating image
Use configured containerName in Run-AlCops and Run-AlValidation
Add parameter -skipAppSourceCop to Run-AlValidation